swagger mods
