# routes/user.js
@@ -6,7 +6,7 @@ const userController = require('../controllers/user');
 router.get('/', userController.getAll);
 router.get('/:username', userController.getUser);
 router.post('/', userController.create);
-// router.put('/:username', userController.updateUser);
+router.put('/:username', userController.updateUser);
 router.delete('/:username', userController.deleteUser);
 
 module.exports = router;
